--- a/moss/css/moss.scss
+++ b/moss/css/moss.scss
@@ -3,7 +3,7 @@
 :root {
 	--primary-color: #88B783;
 	--text-color: #333333;
-	--body-color: #DDDDDD;
+	--a-color: #DDDDDD;
 }
 
 *{
@@ -12,12 +12,38 @@
 	box-sizing: border-box;
 }
 
-body, html {
+body, {
 	height: 100vh;
 	width: 100%;
-	background-color: var(--body-color);
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+	font-weight: 100;
+	font-size: 2.5em;
+}
+
+.about-bg {
+	width: 100%;
+	height: 100vh;
+	background: url("../images/about-bg.jpg");
+	background-size: cover;
+}
+
+.about-txt {
+	position: absolute;
+	box-sizing: border-box;
+	font-weight: 100;
+	font-size: 1.2em;
+	text-align: justify;
+	padding: 2em;
+	margin: 6em;
+	left: 30%;
+	line-height: 1.7em;
+	background: rgba(0, 0 ,0, .6);
+	color: #DDDDDD;
+	
 }
 
 nav ul li {
@@ -26,7 +52,7 @@ nav ul li {
 	
 	a {
 		text-decoration: none;
-		color: var(--body-color);
+		color: var(--a-color);
 	}
 	
 	a:hover {
@@ -46,7 +72,7 @@ nav {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
-	transition: 0.7s;
+	transition: 0.5s;
 }
 
 .nav-exit {
@@ -97,6 +123,45 @@ nav {
 	}
 
 }
+
+#about {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	
+	path:nth-child(1){
+		stroke-dasharray: 1256.8px;
+		stroke-dashoffset: 1256.8px;
+		animation: line-anim 3s ease forwards;
+	}
+	path:nth-child(2){
+		stroke-dasharray: 1417.0px;
+		stroke-dashoffset: 1417.0px;
+		animation: line-anim 3s ease forwards 0.6s;
+	}
+	
+	path:nth-child(3){
+		stroke-dasharray: 1097.3px;
+		stroke-dashoffset: 1097.3px;
+		animation: line-anim 3s ease forwards;
+	}
+	
+	path:nth-child(4){
+		stroke-dasharray: 1190.9px;
+		stroke-dashoffset: 1190.9px;
+		animation: line-anim 3s ease forwards 0.3s;
+	}
+	
+	path:nth-child(5){
+		stroke-dasharray: 886.3px;
+		stroke-dashoffset: 886.3px;
+		animation: line-anim 3s ease forwards 0.3s;
+	}
+
+}
+
+
 
 @keyframes line-anim {
 	to {
