--- a/moss/css/moss.css
+++ b/moss/css/moss.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100&display=swap");
 :root {
   --primary-color: #88B783;
   --text-color: #333333;
@@ -15,11 +16,8 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif; }
 
-h1 {
-  font-weight: 100;
-  font-size: 2.5em; }
-
 .about-bg {
+  position: fixed;
   width: 100%;
   height: 100vh;
   background: url("../images/about-bg.jpg");
@@ -29,14 +27,44 @@ h1 {
   position: absolute;
   box-sizing: border-box;
   font-weight: 100;
-  font-size: 1.2em;
-  text-align: justify;
+  text-align: left;
   padding: 2em;
-  margin: 6em;
-  left: 30%;
-  line-height: 1.7em;
-  background: rgba(0, 0, 0, 0.6);
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  line-height: 6em;
   color: #DDDDDD; }
+  .about-txt p {
+    font-size: 4em; }
+  .about-txt h1 {
+    font-weight: 100;
+    font-size: 6em; }
+
+.ca {
+  color: #CCCCCC;
+  font-family: 'Exo', sans-serif; }
+
+.cay {
+  color: #CAB000;
+  font-family: 'Exo', sans-serif; }
+
+.photoshop {
+  color: #31A8FF; }
+
+.illustrator {
+  color: #FF9B01; }
+
+.indesign {
+  color: #FF3366; }
+
+.xd {
+  color: #FF61F6; }
+
+.html {
+  color: #E44D25; }
+
+.css {
+  color: #0370BA; }
 
 nav ul li {
   list-style: none;
@@ -124,6 +152,17 @@ nav {
     stroke-dasharray: 886.3px;
     stroke-dashoffset: 886.3px;
     animation: line-anim 3s ease forwards 0.3s; }
+
+video {
+  width: 100%;
+  position: fixed;
+  top: -105%; }
+
+#fenrir {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
 
 @keyframes line-anim {
   to {
