--- a/moss/css/moss.scss
+++ b/moss/css/moss.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100&display=swap');
 
 :root {
 	--primary-color: #88B783;
@@ -19,12 +20,8 @@ body, {
 	font-family: 'Roboto', sans-serif;
 }
 
-h1 {
-	font-weight: 100;
-	font-size: 2.5em;
-}
-
 .about-bg {
+	position: fixed;
 	width: 100%;
 	height: 100vh;
 	background: url("../images/about-bg.jpg");
@@ -35,15 +32,57 @@ h1 {
 	position: absolute;
 	box-sizing: border-box;
 	font-weight: 100;
-	font-size: 1.2em;
-	text-align: justify;
+	text-align: left;
 	padding: 2em;
-	margin: 6em;
-	left: 30%;
-	line-height: 1.7em;
-	background: rgba(0, 0 ,0, .6);
+	top: 80%;
+	left: 50%;
+	transform: translate(-50%, -0%);
+	line-height: 6em;
 	color: #DDDDDD;
 	
+	p {
+		font-size: 4em;
+	}
+	
+	h1 {
+		font-weight: 100;
+		font-size: 6em;
+	}
+	
+}
+
+.ca {
+	color: #CCCCCC;
+	font-family: 'Exo', sans-serif;
+}
+
+.cay {
+	color: #CAB000;
+	font-family: 'Exo', sans-serif;
+}
+
+.photoshop {
+	color: #31A8FF;
+}
+
+.illustrator {
+	color: #FF9B01;
+}
+
+.indesign {
+	color: #FF3366;
+}
+
+.xd {
+	color: #FF61F6;
+}
+
+.html {
+	color: #E44D25;
+}
+
+.css {
+	color: #0370BA;
 }
 
 nav ul li {
@@ -161,7 +200,18 @@ nav {
 
 }
 
+video {
+	width: 100%;
+	position: fixed;
+	top: -105%;
+}
 
+#fenrir {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 
 @keyframes line-anim {
 	to {
@@ -177,3 +227,14 @@ nav {
 		fill: #88B783;
 	}
 }
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
